--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 https://www.youtube.com/watch?v=PlMKl5pO3F0&t=167s %>
 <div class="delorean">
   <picture>
-    <source media="(min-width: 400px)" srcset="/images/vehicles/delorean.jpg" />
+<%#    <source media="(min-width: 400px)" srcset="/images/vehicles/delorean.jpg" />  %>
     <img
       src="/images/vehicles/delorean.jpg"
       alt="DMC Delorean"
