--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,30 +1,38 @@
 <!-- The Login page -->
 <% if (title) { %>
-  <h1> <%= title %></h1>
-<% } else {
-  res.redirect('/')
-} %>
-
-<%- messages() %>
+<h1><%= title %></h1>
+<% } else { res.redirect('/') } %> <%- messages() %>
 
 <div class="login">
-      <!-- From the video https://www.youtube.com/watch?v=5H0aIxO1oC0 -->
-      <form id="loginForm" action="/account/login" method="post">
-        <label for="account_email">Email</label>
-        <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email || '' %>">
+  <!-- From the video https://www.youtube.com/watch?v=5H0aIxO1oC0 -->
+  <form id="loginForm" action="/account/login" method="post">
+    <label for="account_email">Email</label>
+    <input
+      type="email"
+      id="account_email"
+      name="account_email"
+      required
+      value="<%= locals.account_email || '' %>"
+    />
 
-        <div class="password-requirements">
-          <p>Password must be at least 8 characters and contain:</p>
-          <ul>
-            <li>1 number + 1 capital letter + 1 special character</li>
-          </ul>
-        </div>
+    <div class="password-requirements">
+      <p>Password must be at least 12 characters and contain:</p>
+      <ul>
+        <li>1 number + 1 capital letter + 1 special character</li>
+      </ul>
+    </div>
 
-        <label for="account_password">Password:</label>
-        <input type="password" id="account_password" name="account_password" required 
-          pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}$" placeholder="Enter your password">
+    <label for="account_password">Password:</label>
+    <input
+      type="password"
+      id="account_password"
+      name="account_password"
+      required
+      pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
+      placeholder="Enter your password"
+    />
 
-        <input type="submit" value="Login">
-        <p>Don't have an account? <a href="/account/register">Sign-up here</a></p>
-      </form>
+    <input type="submit" value="Login" />
+    <p>Don't have an account? <a href="/account/register">Sign-up here</a></p>
+  </form>
 </div>
