--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,15 +1,11 @@
 <!-- The Error page -->
 <div class="error_page">
   <% if (title) { %>
-    <h1> <%= title %></h1>
-  <% } else {
-    res.redirect('/')
-  } %>
-  
-  <% if (title == 404 || title == "404") { %>
-    <img src="/images/site/lost.png" alt="Injured person">
+  <h1><%= title %></h1>
+  <% } else { res.redirect('/') } %> <% if (title == 404 || title == "404") { %>
+  <img src="/images/site/lost.png" alt="Injured person" />
   <% } else { %>
-   <img src="/images/site/injured.png" alt="Injured person">
+  <img src="/images/site/injured.png" alt="Injured person" />
   <% } %>
 
   <h3><%= message %></h3>
