--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,2 +1,13 @@
+<% if (title) { %>
+    <h1> <%= title %></h1>
+  <% } else {
+    res.redirect('/')
+  } %>
+  
+  <%- messages() %>
 
-<%- vehicle %>
+  <%- vehicle %>
+  
+  <%- watchListButton %>
+  
+  <%- template %>
