--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,13 @@
 <header id="top-header">
-    <span class="siteName">
-      <a href="/" title="Return to home page">CSE Motors</a>
-    </span>
-    <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
-  </header>
+  <h1 class="siteName">
+    <a href="/" title="Return to home page">CSE Motors</a>
+  </h1>
+  <div id="tools">
+    <% if (locals.loggedin) { %> Welcome
+    <a href="/account"><%= locals.accountData.account_firstname %></a>
+    <a href="/account/logout">Logout</a>
+    <% } else { %>
+    <a href="/account/login" title="Click to log in">My Account</a>
+    <% } %>
+  </div>
+</header>
