--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,5 +1,17 @@
+<!-- The Management page -->
 <div class="account">
-    <h1><%= title %></h1>
+    <h1>
+        <%= title %>
+    </h1>
     <p><%- messages() %></p>
     <h2>You're logged in!</h2>
+    <% if (locals.accountData.account_type==="Client" ) { %>
+        <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
+        <br>
+        <p><a href="/account/update">Update Account Information</a></p>
+        <% } else if (locals.accountData.account_type==="Employee" || locals.accountData.account_type==="Admin" ) { %>
+            <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
+            <h3>Inventory Management</h3>
+            <p><a href="/inv/">Manage your inventory</a></p>
+            <% } %>
 </div>
