--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,14 +1,12 @@
 <!-- The Heading -->
 <% if (title) { %>
   <h1><%= title %></h1>
-  <% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
-  <ul class="notice">
-    <% errors.array().forEach(error => { %>
-    <li><%= error.msg %></li>
-    <% }) %>
-  </ul>
-  <% } %>
+  <% } else {
+    res.redirect('/')
+  } %>
 
- 
+<!-- A Message Block -->
+<%# messages() %>
+
 <!-- The Inventory Items Display -->
 <%- grid %>
