Work weeks 10-12 Login, update, delete inv  29Mar25

--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,10 +1,17 @@
 <!-- The Error page -->
-<div class="error-page">
-  <h1><%= title %></h1>
-  <p><%- message %></p>
 
-  <div class="fun-section">
-    <p>Don't worry—it's not you, it's us (probably).</p>
-    <p>the page is missing..</p>
-  </div>
+<div class="error_page">
+  <% if (title) { %>
+    <h1> <%= title %></h1>
+  <% } else {
+    res.redirect('/')
+  } %>
+  
+  <% if (title == 404 || title == "404") { %>
+    <img src="/images/site/lost.png" alt="Injured person">
+  <% } else { %>
+   <img src="/images/site/injured.png" alt="Injured person">
+  <% } %>
+
+  <h3><%= message %></h3>
 </div>
