--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -82,7 +82,8 @@
       value="<%= locals.inv_color %>"
     />
     <button type="submit">Update Vehicle</button>
-    <input type="hidden" name="inv_id" <% if(locals.inv_id) { % /> value="<%=
-    locals.inv_id %>" <% } %>>
+    <input type="hidden" name="inv_id" 
+    <% if(locals.inv_id) { % /> value="<%= locals.inv_id %>" 
+    <% } %>>
   </form>
 </div>
