--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,28 +1,59 @@
 <!-- The Management page -->
-<div class="account">
-    <h1>
-        <%= title %>
-    </h1>
-    <p><%- messages() %></p>
-    <h2>You're logged in!</h2>
-    <% if (locals.accountData.account_type==="Client" ) { %>
-        <h2>Welcome , <%= locals.accountData.account_firstname %>!</h2>
-        <br>
-        <p><a href="/account/update">Update Account Information</a></p>
-        <% } else if (locals.accountData.account_type==="Employee" || locals.accountData.account_type==="Admin" ) { %>
-            <h3>Welcome back, <%= locals.accountData.account_firstname %>!</h3>
-            <h3>Inventory Management</h3>
-            <h3>C R U D (Create, Edit, Update, Delete)</h3>
+<% if (title) { %>
+  <h1>
+    <%= title %>
+  </h1>
+  <% } else { res.redirect('/') } %>
 
-            <ul id="managementLinks">
-                <li>
-                  <a href="/inv/add-classification">Add new classification</a>
-                </li>
-                <li>
-                  <a href="/inv/add-inventory">Add new inventory</a>
-                </li>
-                
-              </ul>
-              
-            <% } %>
-</div>
+    <%- messages() %>
+
+      <% if (errors) { %>
+        <ul class="notice">
+          <% errors.array().forEach(error=> { %>
+            <li>
+              <%= error.msg %>
+            </li>
+            <% }) %>
+        </ul>
+        <% } %>
+
+          <div class="account">
+
+            <h2>You're logged in!</h2>
+            <% if (locals.accountData.account_type==="Client" ) { %>
+              <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
+              <div class="inv-management">
+                <br>
+                <h2>Manage Client Account</h2>
+                <br>
+                <p>Update Data Account Change Password.</p>
+                <br>
+                <%- locals.classificationList %>
+                  <br>
+                  <a href="/account/update">Update Account Information</a>
+                  <br>
+                  <% } else if (locals.accountData.account_type==="Employee" ||
+                    locals.accountData.account_type==="Admin" ) { %>
+                    <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
+                    <div class="inv-management">
+                      <br>
+                      <h2>Manage Inventory</h2>
+                      <br>
+                      <p>Please select an option to manage inventory items.</p>
+                      <br>
+                      <%- locals.classificationList %>
+                        <br>
+                        <a href="/inv/add-classification">Add New Classification</a>
+                        <br>
+                        <a href="/inv/add-inventory">Add New Inventory</a>
+                        <br>
+                        <a href="/inv/update">Update Inventory</a>
+                        <br>
+                        <a href="/inv/delete-confirm">Delete Inventory</a>
+                        <br>
+                        <table id="inventoryDisplay"></table>
+                        <noscript>JavaScript must be enabled to use this page</noscript>
+                        <script src="../../js/inventory.js"></script>
+                    </div>
+                    <% } %>
+              </div>
