--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,8 +1,14 @@
 <!-- The Register page -->
 <% if (title) { %>
 <h1><%= title %></h1>
-<% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
-<ul class="notice">
+<% } else {
+  res.redirect('/')
+   } %> 
+   
+   <%- messages() %>
+   
+   <% if (errors) { %>
+   <ul class="notice">
   <% errors.array().forEach(error => { %>
   <li><%= error.msg %></li>
   <% }) %>
