--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,25 +1,26 @@
 <% if (title) { %>
-  <h1><%= title %></h1>
-  <% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
-  <ul class="notice">
-    <% errors.array().forEach(error => { %>
-    <li><%= error.msg %></li>
-    <% }) %>
-  </ul>
-  <% } %>
+  <h1> <%= title %></h1>
+<% } else {
+  res.redirect('/')
+} %>
 
-<div class="inv-management">
-  <a href="/inv/add-classification">Add New Classification</a>
-  <br>
-  <a href="/inv/add-inventory">Add New Inventory</a>
-  <br>
-  <h2>Manage Inventory</h2>
-  <br>
-  <p>Please select a classification to manage inventory items.</p>
-  <br>
-  <%- locals.classificationList %>
-  <br>
-  <table id="inventoryDisplay"></table>
-  <noscript>JavaScript must be enabled to use this page</noscript>
-  <script src="/js/inventory.js"></script>
-</div>
+<%- messages() %>
+
+<ul id="managementLinks">
+  <li>
+    <a href="/inv/add-classification">Add new classification</a>
+  </li>
+  <li>
+    <a href="/inv/add-inventory">Add new inventory</a>
+  </li>
+</ul>
+
+<h2>Manage Inventory</h2>
+<p>Choose a classification from the list</p>
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="/js/inventory.js"></script>
