Final Project 08Abr20255

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,68 +1,62 @@
 <h1>Welcome to CSE Motors!</h1>
-<%- messages() %> 
-<%# Unit 4, Sessions & Messages activity %> <%# From video
-https://www.youtube.com/watch?v=PlMKl5pO3F0&t=167s %>
-<div class="delorean">
-  <picture>
-<%#    <source media="(min-width: 400px)" srcset="/images/vehicles/delorean.jpg" />  %>
-    <img
-      src="/images/vehicles/delorean.jpg"
-      alt="DMC Delorean"
-      width="500"
-      height="255"
-      class="delorean-image"
-    />
-  </picture>
-  <div class="car-info">
-    <h2>DMC Delorean</h2>
-    <ul>
-      <li>3 Cup holders</li>
-      <li>Superman doors</li>
-      <li>Fuzzy dice!</li>
-    </ul>
-    <a href="#" class="button">Own Today</a>
-  </div>
-</div>
+<%- messages() %>
+  <%# Unit 4, Sessions & Messages activity %>
+    <%# From video https://www.youtube.com/watch?v=PlMKl5pO3F0&t=167s %>
+      <div class="delorean">
+        <picture>
+          <source media="(min-width: 480px)" srcset="/images/vehicles/delorean.jpg">
+          <img src="/images/vehicles/delorean.jpg" alt="DMC Delorean" width="500" height="255" class="delorean-image" />
+        </picture>
+        <div class="car-info">
+          <h2>DMC Delorean</h2>
+          <ul>
+            <li>3 Cup holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+          </ul>
+          <a href="#" class="button">Own Today</a>
+        </div>
+      </div>
 
-<section class="bottom-grid">
-  <div class="reviews">
-    <h3>DMC Delorean Reviews</h3>
-    <ul>
-      <li>"So fast it's almost like traveling in time." (4/5)</li>
-      <li>"Coolest ride on the road." (4/5)</li>
-      <li>"I'm feeling McFly!" (5/5)</li>
-      <li>"The most futuristic ride of our day." (4.5/5)</li>
-      <li>"80's live and I love it!" (5/5)</li>
-    </ul>
-  </div>
+      <section class="bottom-grid">
+        <div class="reviews">
+          <h3>DMC Delorean Reviews</h3>
+          <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's live and I love it!" (5/5)</li>
+          </ul>
+        </div>
 
-  <section class="upgrades">
-    <h3>Delorean Upgrades</h3>
-    <div class="upgrades-grid">
-      <div>
-        <div class="upgrade-item">
-          <img src="/images/upgrades/flux-cap.png" alt="flux capacitor" />
-        </div>
-        <p>Flux Capacitor</p>
-      </div>
-      <div>
-        <div class="upgrade-item">
-          <img src="/images/upgrades/flame.jpg" alt="flame decals" />
-        </div>
-        <p>Flame Decals</p>
-      </div>
-      <div>
-        <div class="upgrade-item">
-          <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper sticker" />
-        </div>
-        <p>Bumper Sticker</p>
-      </div>
-      <div>
-        <div class="upgrade-item">
-          <img src="/images/upgrades/hub-cap.jpg" alt="hubcaps" />
-        </div>
-        <p>Hubcaps</p>
-      </div>
-    </div>
-  </section>
-</section>
+        <section class="upgrades">
+          <h3>Delorean Upgrades</h3>
+          <div class="upgrades-grid">
+            <div>
+              <div class="upgrade-item">
+                <img src="/images/upgrades/flux-cap.png" alt="flux capacitor" />
+              </div>
+              <p>Flux Capacitor</p>
+            </div>
+            <div>
+              <div class="upgrade-item">
+                <img src="/images/upgrades/flame.jpg" alt="flame decals" />
+              </div>
+              <p>Flame Decals</p>
+            </div>
+            <div>
+              <div class="upgrade-item">
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper sticker" />
+              </div>
+              <p>Bumper Sticker</p>
+            </div>
+            <div>
+              <div class="upgrade-item">
+                <img src="/images/upgrades/hub-cap.jpg" alt="hubcaps" />
+              </div>
+              <p>Hubcaps</p>
+            </div>
+          </div>
+        </section>
+      </section>
