--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -251,7 +251,7 @@ input:required:valid {
   font-size: medium;
 }
 
-.fun-section {
+.error-section {
   margin: 0 5rem;
   padding-top: 10px;
   line-height: 2rem;
@@ -444,6 +444,25 @@ a:hover {
 }
 
 .inv-management a:hover {
+  background-color: #0a9bd5;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.inventorydisplay a {
+  text-decoration: none;
+  padding: 10px 20px;
+  margin: 0px;
+  background-color: var(--colorLogin);
+  color: var(--secondary-color);
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  font-family: Arial, sans-serif;
+  font-size: 1.2em;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.inventorydisplay a:hover {
   background-color: #0a9bd5;
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
