--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,59 +1,33 @@
-<!-- The Management page -->
-<% if (title) { %>
-  <h1>
-    <%= title %>
-  </h1>
-  <% } else { res.redirect('/') } %>
+<h1><%= title %></h1>
+<div class="account">
+<%- messages() %>
+  <% if (locals.accountData.account_type === "Client") { %>
+    <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
+    <p><a href="/account/update">Update Account Information</a></p>
+  <% } else if (locals.accountData.account_type === "Employee" || locals.accountData.account_type === "Admin") { %>
+    <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
+    <h3>Inventory Management</h3>
+    <p><a href="../account/management">Manage your inventory</a></p>
+    <p><a href="/account/update">Update Account Information</a></p>
+  <% } %>
 
-    <%- messages() %>
-
-      <% if (errors) { %>
-        <ul class="notice">
-          <% errors.array().forEach(error=> { %>
-            <li>
-              <%= error.msg %>
-            </li>
-            <% }) %>
-        </ul>
-        <% } %>
-
-          <div class="account">
-
-            <h2>You're logged in!</h2>
-            <% if (locals.accountData.account_type==="Client" ) { %>
-              <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
-              <div class="inv-management">
-                <br>
-                <h2>Manage Client Account</h2>
-                <br>
-                <p>Update Data Account Change Password.</p>
-                <br>
-                <%- locals.classificationList %>
-                  <br>
-                  <a href="/account/update">Update Account Information</a>
-                  <br>
-                  <% } else if (locals.accountData.account_type==="Employee" ||
-                    locals.accountData.account_type==="Admin" ) { %>
-                    <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
-                    <div class="inv-management">
-                      <br>
-                      <h2>Manage Inventory</h2>
-                      <br>
-                      <p>Please select an option to manage inventory items.</p>
-                      <br>
-                      <%- locals.classificationList %>
-                        <br>
-                        <a href="/inv/add-classification">Add New Classification</a>
-                        <br>
-                        <a href="/inv/add-inventory">Add New Inventory</a>
-                        <br>
-                        <a href="/inv/update">Update Inventory</a>
-                        <br>
-                        <a href="/inv/delete-confirm">Delete Inventory</a>
-                        <br>
-                        <table id="inventoryDisplay"></table>
-                        <noscript>JavaScript must be enabled to use this page</noscript>
-                        <script src="../../js/inventory.js"></script>
-                    </div>
-                    <% } %>
-              </div>
+  <h2>Your Reviews</h2>
+  <% if (!reviews || reviews.length === 0) { %>
+    <p>You haven't written any reviews yet.</p>
+  <% } else { %>
+    <ul class="reviews">
+      <% reviews.forEach(review => { %>
+        <li>
+          <p><%= review.review_text %></p>
+          <p>Vehicle: <%= review.inv_make %> <%= review.inv_model %></p>
+          <p>Date: <%= review.review_date.toLocaleDateString() %></p>
+          <a href="/review/edit/<%= review.review_id %>">Edit</a>
+          <form action="/review/delete" method="post" style="display:inline;">
+            <input type="hidden" name="review_id" value="<%= review.review_id %>">
+            <button class="review" type="submit">Delete (is permanant)</button>
+          </form>
+        </li>
+      <% }) %>
+    </ul>
+  <% } %>
+</div>
