--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,17 +1,12 @@
 <!-- The Error page -->
-
 <div class="error_page">
-  <% if (title) { %>
-    <h1> <%= title %></h1>
-  <% } else {
-    res.redirect('/')
-  } %>
-  
-  <% if (title == 404 || title == "404") { %>
-    <img src="/images/site/lost.png" alt="Injured person">
-  <% } else { %>
-   <img src="/images/site/injured.png" alt="Injured person">
-  <% } %>
-
-  <h3><%= message %></h3>
+    <h1><%= title %> </h1>
+    <p><%- message %></p>
+    <%- messages() %>
+    <div class="error-section">
+        <p>Don't worry— It's probably our mistake.</p>
+        <br>
+        <p> We are working to improve </p>
+        <br>
+    </div>
 </div>
