--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,11 @@
     <a href="/" title="Return to home page">CSE Motors</a>
   </h1>
   <div id="tools">
-    <% if (locals.loggedin) { %> Welcome
-    <a href="/account"><%= locals.accountData.account_firstname %></a>
-    <a href="/account/logout">Logout</a>
-    <% } else { %>
-    <a href="/account/login" title="Click to log in">My Account</a>
+    <% if (locals.loggedin) { %>
+      Welcome <a href="/account"><%= locals.accountData.account_firstname %></a> 
+      <a href="/account/logout">Logout</a>
+    <% } else { %>  
+      <a href="/account/login" title="Click to log in">My Account</a>
     <% } %>
   </div>
 </header>
