--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -7,7 +7,7 @@
   <% } else if (locals.accountData.account_type === "Employee" || locals.accountData.account_type === "Admin") { %>
     <h2>Welcome back, <%= locals.accountData.account_firstname %>!</h2>
     <h3>Inventory Management</h3>
-    <p><a href="../account/management">Manage your inventory</a></p>
+    <p><a href="/inv">Manage your inventory</a></p>
     <p><a href="/account/update">Update Account Information</a></p>
   <% } %>
 
