--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,26 +1,17 @@
-<% if (title) { %>
-  <h1> <%= title %></h1>
-<% } else {
-  res.redirect('/')
-} %>
-
+<h1><%= title %></h1>
 <%- messages() %>
-
-<ul id="managementLinks">
-  <li>
-    <a href="/inv/add-classification">Add new classification</a>
-  </li>
-  <li>
-    <a href="/inv/add-inventory">Add new inventory</a>
-  </li>
-</ul>
-
-<h2>Manage Inventory</h2>
-<p>Choose a classification from the list</p>
-<%- classificationSelect %>
-
-<table id="inventoryDisplay"></table>
-
-<noscript>JavaScript must be enabled to use this page.</noscript>
-
-<script src="/js/inventory.js"></script>
+  <div class="inv-management">
+    <a href="/inv/add-classification">Add New Classification</a>
+    <br>
+    <a href="/inv/add-inventory">Add New Inventory</a>
+    <br>
+    <h2>Manage Inventory</h2>
+    <br>
+    <p>Please select a classification to manage inventory items.</p>
+    <br>
+    <%- locals.classificationList %>
+    <br>
+    <table id="inventoryDisplay"></table>
+    <noscript>JavaScript must be enabled to use this page</noscript>
+    <script src="/js/inventory.js"></script>
+  </div>
