--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -15,19 +15,31 @@
   <% if (!reviews || reviews.length === 0) { %>
     <p>You haven't written any reviews yet.</p>
   <% } else { %>
+
+
     <ul class="reviews">
       <% reviews.forEach(review => { %>
         <li>
           <p><%= review.review_text %></p>
           <p>Vehicle: <%= review.inv_make %> <%= review.inv_model %></p>
           <p>Date: <%= review.review_date.toLocaleDateString() %></p>
-          <a href="/review/edit/<%= review.review_id %>">Edit</a>
+            <input type="hidden" name="review_id" value="<%= review.review_id %>">
+           <a href="/review/edit/<%= review.review_id %>">
+            <button class="btn btn-primary"><i class="bi-pencil"></i> Edit</button>  
+          </a>
+
           <form action="/review/delete" method="post" style="display:inline;">
             <input type="hidden" name="review_id" value="<%= review.review_id %>">
-            <button class="review" type="submit">Delete (is permanant)</button>
-          </form>
+         <!--    <button class="review" type="submit">Delete (is permanant)</button> 
+            <div class="container text-center mt-5"> -->
+              <button class="btn btn-primary"> 
+                <i class="bi bi-trash"></i> Delete (is permanant)
+              </button>
+          </form>    
+          
         </li>
       <% }) %>
     </ul>
+    </div>
   <% } %>
 </div>
