--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,5 +14,8 @@
 
         <%- include('../partials/footer') %>
     </div>
+    
+    <!-- Link to a Bootstrap JS -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
