--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,4 +5,10 @@
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/images/site/favicon-32x32.png" type="image/x-icon">
+    
+    <!-- link to Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- link to Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
